Feed and Bot work and Update can be called from Discord

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
+    "ts-node": {
+        "compilerOptions": {
+          "module": "commonjs"
+        },
+    },
     "compilerOptions": {
         "target": "ESNext",
         "module": "commonjs",
         "rootDir": "./src/",
         "outDir": "./dist/",
         "strict": true,
-        "moduleResolution": "node",
+        "moduleResolution": "Node",
         "importHelpers": true,
         "experimentalDecorators": true,
         "esModuleInterop": true,
