--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@marketgridsys/prettier": "^2.7.0-mgs.3",
+    "axios": "^1.1.3",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
