--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@marketgridsys/prettier": "^2.7.0-mgs.3",
     "axios": "^1.1.3",
+    "axios-retry": "^3.3.1",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3"
   },
