--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       #    echo DATABASE_ADDRESS=${{ secrets.DATABASE_ADDRESS }} >> .env
 
       - name: Install PM2
-        run: sudo npm install -g
+        run: sudo npm install -g pm2
 
       - name: Deploy
         #run: env $(cat .env | grep -v \"#\" | xargs) pm2 deploy ecosystem.config.js production
