--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Setup Deploy
         #run: env $(cat .env | grep -v \"#\" | xargs) pm2 deploy ecosystem.config.js production
-        run: pm2 deploy ecosystem.config.js setup production
+        run: pm2 deploy ecosystem.config.js production setup
 
       - name: Deploy
         #run: env $(cat .env | grep -v \"#\" | xargs) pm2 deploy ecosystem.config.js production
