--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ./deploy.key
           sudo chmod 600 ./deploy.key
           echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
-          touch /etc/hosts
-          echo "ffew.space dnet-nyc3do" >> /etc/hosts
+          sudo touch /etc/hosts
+          sudo echo "ffew.space dnet-nyc3do" >> /etc/hosts
         shell: bash
         env:
           SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
