new Github Action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,36 +7,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      #
-      # ... your other steps, such as running tests, etc...
-      #
-      - name: Set up SSH
-        run: |
-          mkdir -p ~/.ssh/
-          echo "$SSH_PRIVATE_KEY" > ./deploy.key
-          sudo chmod 600 ./deploy.key
-          echo "$SSH_KNOWN_HOSTS" > ~/.ssh/known_hosts
-          sudo touch /etc/hosts
-          sudo echo "ffew.space dnet-nyc3do" >> /etc/hosts
-        shell: bash
-        env:
-          SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
-          SSH_KNOWN_HOSTS: ${{secrets.SSH_KNOWN_HOSTS}}
-
-      #- name: Create env file
-      #  run: |
-      #    touch .env
-      # (optional - only needed if your config uses environment variables)
-      #    echo DATABASE_ADDRESS=${{ secrets.DATABASE_ADDRESS }} >> .env
-
-      - name: Install PM2
-        run: sudo npm install -g pm2
-
-      - name: Setup Deploy
-        #run: env $(cat .env | grep -v \"#\" | xargs) pm2 deploy ecosystem.config.js production
-        run: pm2 deploy ecosystem.config.js production setup
-
-      - name: Deploy
-        #run: env $(cat .env | grep -v \"#\" | xargs) pm2 deploy ecosystem.config.js production
-        run: pm2 deploy ecosystem.config.js production
+      - name: SSH and deploy node app
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            cd ~/KillFeed
+            git pull origin main
+            npm install --production
+            pm2 restart KillFeed
