--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,6 @@ jobs:
           script: |
             cd ~/KillFeed
             git pull origin main
-            npm install --production
+            npm install
+            ./node_modules/typescript/bin/tsc
             pm2 restart KillFeed
