--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "prod-build-run": "tsc && node dist/Bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Lak Moore",
   "license": "ISC",
   "dependencies": {
-    "@marketgridsys/prettier": "^2.7.0-mgs.3",
     "axios": "^1.1.3",
     "axios-retry": "^3.3.1",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
+    "@marketgridsys/prettier": "^2.9.0-mgs.4",
     "@types/node": "^18.11.9",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
