Make Queue ID configurable

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-SECRET_TOKEN = ""
-NODE_ENV = "development"
-JANICE_KEY = "Request one from Janice Discord"
+SECRET_TOKEN = "Get this from Eve ESI"
+NODE_ENV="development"
+JANICE_KEY="Request one from Janice Discord"
+QUEUE_ID="LakMooresDevKillFeed"
