--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axios-retry": "^3.3.1",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
-    "eve-client-ts": "^1.0.0"
+    "eve-client-ts": "^1.0.0",
+    "node-persist": "^3.1.3"
   },
   "devDependencies": {
     "@marketgridsys/prettier": "^2.9.0-mgs.4",
     "@types/node": "^18.11.9",
+    "@types/node-persist": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint-config-prettier": "^8.8.0",
