--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "killfeed",
   "version": "1.0.2",
   "description": "zKillboard bot for Eve Online",
+  "engines": {
+    "node": "22.17.0"
+  },
   "main": "src/Bot.ts",
   "scripts": {
     "start": "ts-node src/Bot.ts",
-    "build": "tsc",
+    "build": "npx tsc",
     "prod-start": "node dist/Bot.js",
     "prod-build-run": "tsc && node dist/Bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,7 +25,7 @@
   },
   "devDependencies": {
     "@marketgridsys/prettier": "^2.9.0-mgs.4",
-    "@types/node": "^18.11.9",
+    "@types/node": "^22.18.3",
     "@types/node-persist": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
