--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
   "root": true,
+  "ignorePatterns": ["**/*.js"],
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
