Improve example .env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SECRET_TOKEN = "Get this from Eve ESI"
 NODE_ENV="development"
 JANICE_KEY="Request one from Janice Discord"
-QUEUE_ID="LakMooresDevKillFeed"
+QUEUE_ID="Make this up yourself and keep it unique"
 OUTBOUND_IP = ""
