--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "src/Bot.ts",
   "scripts": {
-    "start": "ts-node src/Bot.ts",
+    "start": "node dist/Bot.js",
     "build": "npx tsc",
     "prod-start": "node dist/Bot.js",
     "prod-build-run": "tsc && node dist/Bot.js",
@@ -18,7 +18,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "axios-retry": "^3.3.1",
-    "discord.js": "^14.6.0",
+    "discord.js": "^14.25.1",
     "dotenv": "^16.0.3",
     "eve-client-ts": "^1.0.0",
     "node-persist": "^3.1.3"
@@ -31,7 +31,6 @@
     "@typescript-eslint/parser": "^6.1.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.9.3"
   }
 }
