--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,5 +20,5 @@ jobs:
             sudo -u pmtwo git fetch origin main
             sudo -u pmtwo git reset --hard origin/main
             sudo -u pmtwo npm install
-            sudo -u pmtwo ./node_modules/typescript/bin/tsc
+            sudo -u pmtwo npm run build
             sudo -u pmtwo pm2 restart KillFeed
